# splitrad

./: CMakeLists.txt  README.md  dftups.h  fft.h  main.cpp  prune.cpp  test_data.cc
